- survey box width fixed (to deal with a static box height) - do not display survey box on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -606,13 +606,22 @@ div#cbox {
 .survey-container {
     font-size: small;
     width:auto;
-    max-width: 25%;
+    max-width: 18rem;
     position:absolute;
     bottom:0;
     right:0;
     margin:0 auto;
     visibility: hidden;
 }
+
+.survey-container.desktop {
+    display: unset;
+}
+
+.survey-container.mobile {
+    display: none;
+}
+
 #survey-button {
     cursor:pointer;
     display:block;
